<resources>
    <string name="app_name">aws-cognito-login-ex01</string>
    <string name="splash_title">Splash Screen</string>
    <string name="logout">Logout</string>
    <string name="login_screen">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="forgot_title">Reset Password</string>
    <string name="reset_code">Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_title">Confirm your code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Resend Code</string>
    <string name="register_title">Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
</resources>